# lineageflow

./: .gitignore  Makefile  README.md  cabal-ghcjs.project  cabal.project  client.nix  make-client  make-server  release.nix  run-client  run-server  shell.nix
algorithms/lineageflow-clustering/: README.md  default.nix  lineageflow-clustering.cabal
algorithms/lineageflow-clustering/app/: Clusters.hs  LiftClusters.hs  Main.hs  Mixing.hs  Similarity.hs
algorithms/lineageflow-clustering/desc/: clusters.md  lift-clusters.md  main.md  mixing.md  similarity.md
algorithms/lineageflow-derivatives/: README.md  default.nix  lineageflow-derivatives.cabal
algorithms/lineageflow-derivatives/app/: Holoborodko.hs  Lanczos.hs  Main.hs  Simple.hs
algorithms/lineageflow-derivatives/desc/: holoborodko.md  lanczos.md  main.md  simple.md
algorithms/lineageflow-deviations/: README.md  default.nix  lineageflow-deviations.cabal
algorithms/lineageflow-deviations/app/: AllNeighbors.hs  BornNeighbors.hs  Main.hs  Sisters.hs
algorithms/lineageflow-deviations/desc/: all.md  born.md  main.md  sisters.md
algorithms/lineageflow-forces/: README.md  default.nix  lineageflow-forces.cabal
algorithms/lineageflow-forces/app/: Asym.hs  Forces.hs  Main.hs  Norm.hs  Pression.hs  Stress.hs  Tension.hs
algorithms/lineageflow-forces/desc/: asym.md  forces.md  main.md  norm.md  stress.md
algorithms/lineageflow-forces/src/LineageFlow/: Forces.hs
algorithms/lineageflow-homogenization/: README.md  default.nix  lineageflow-homogenization.cabal
algorithms/lineageflow-homogenization/app/: Contacts.hs  Main.hs  SpaceGaussianTensor.hs  SpaceGaussianVector.hs  SpaceGaussianVectorSparse.hs  TimeFlatTensor.hs  TimeFlatVector.hs
algorithms/lineageflow-homogenization/desc/: main.md  space-gaussian-tensor.md  space-gaussian-vector.md  time-flat-contacts.md  time-flat-tensor.md  time-flat-vector.md
algorithms/lineageflow-statistics/: README.md  default.nix  lineageflow-statistics.cabal
algorithms/lineageflow-statistics/src/LineageFlow/: Statistics.hs
algorithms/lineageflow-tracking/: README.md  default.nix  lineageflow-tracking.cabal
algorithms/lineageflow-tracking/app/: Main.hs  Restrict.hs  Tracking.hs
algorithms/lineageflow-tracking/desc/: main.md  restrict.md  tracking.md
algorithms/lineageflow-tracking/src/LineageFlow/: Tracking.hs
algorithms/lineageflow-trajectories/: README.md  default.nix  lineageflow-trajectories.cabal
algorithms/lineageflow-trajectories/app/: Main.hs  ScalarPairPathIntegral.hs  VectorPairPathIntegral.hs
algorithms/lineageflow-trajectories/desc/: main.md  scalar.md  vector.md
algorithms/lineageflow-triangulations/: README.md  default.nix  lineageflow-triangulations.cabal
algorithms/lineageflow-triangulations/app/: Delaunay.hs  Distance.hs  Expand.hs  FilterBigger.hs  FilterSmaller.hs  FullGraph.hs  GlobalNeighbors.hs  GlobalNeighborsGenealogy.hs  Main.hs  Merge.hs  NeighborhoodProportionalRadius.hs  NeighborhoodRadius.hs  Neighbors.hs
algorithms/lineageflow-triangulations/desc/: delaunay.md  distance.md  expand.md  filter-bigger.md  filter-smaller.md  full-graph.md  global-neighbors-genealogy.md  global-neighbors.md  main.md  merge.md  neighborhood-proportional-radius.md  neighborhood-radius.md  neighbors.md
extra/bioemergences-clustering/: README.md  bioemergences-clustering.cabal  default.nix  docker.nix  shell.nix
extra/bioemergences-clustering/app/: Main.hs  PositionAndVelocity.hs  PositionOnly.hs
infrastructure/lineageflow-algorithm/: README.md  default.nix  lineageflow-algorithm.cabal
infrastructure/lineageflow-algorithm/src/LineageFlow/: Algorithm.hs
infrastructure/lineageflow-base/: README.md  default.nix  lineageflow-base.cabal
infrastructure/lineageflow-base/src/LineageFlow/: Base.hs
infrastructure/lineageflow-database/: README.md  default.nix  lineageflow-database.cabal
infrastructure/lineageflow-database-sqlite/: README.md  default.nix  lineageflow-database-sqlite.cabal  shell.nix
infrastructure/lineageflow-database/src/LineageFlow/: Database.hs
infrastructure/lineageflow-declaration/: README.md  default.nix  lineageflow-declaration.cabal
infrastructure/lineageflow-declaration/src/LineageFlow/: Declaration.hs
infrastructure/lineageflow-io/: README.md  default.nix  lineageflow-io.cabal
infrastructure/lineageflow-io-cbor/: README.md  default.nix  lineageflow-io-cbor.cabal
infrastructure/lineageflow-io/src/LineageFlow/: IO.hs
infrastructure/lineageflow-prelude/: README.md  default.nix  lineageflow-prelude.cabal
infrastructure/lineageflow-prelude/src/LineageFlow/: ArrayU.hs  (+3 more)
infrastructure/lineageflow-query/: README.md  default.nix  lineageflow-query.cabal
infrastructure/lineageflow-types/: README.md  default.nix  lineageflow-types.cabal
tools/lineageflow-client/: default.nix  lineageflow-client.cabal
tools/lineageflow-client/app/: Main.hs
tools/lineageflow-client/css/: test.css
tools/lineageflow-client/desc/: home.md
tools/lineageflow-export/: README.md  default.nix  lineageflow-export.cabal  shell.nix
tools/lineageflow-export/app/: Main.hs
tools/lineageflow-import/: README.md  default.nix  lineageflow-import.cabal
tools/lineageflow-import/app/: Main.hs
tools/lineageflow-playground/: README.md  default.nix  lineageflow-playground.cabal
tools/lineageflow-plot/: default.nix  lineageflow-plot.cabal
tools/lineageflow-plot-interface/: README.md  default.nix  lineageflow-plot-interface.cabal
tools/lineageflow-plot/app/: Main.hs  Parser.hs
tools/lineageflow-script/: README.md  default.nix  lineageflow-script.cabal
tools/lineageflow-server/: default.nix  lineageflow-server.cabal  shell.nix
tools/lineageflow-server-api/: default.nix  lineageflow-server-api.cabal
tools/lineageflow-server/app/: Algorithm.hs  Check.hs  Commands.hs  Declaration.hs  Executables.hs  Fields.hs  Imports.hs  Launch.hs  Main.hs  Match.hs  ScriptGet.hs  ScriptList.hs  ScriptRun.hs  ScriptSave.hs  Search.hs  Utils.hs  Viewer.hs
tools/lineageflow-viewer-interface/: README.md  default.nix  lineageflow-viewer-interface.cabal
(+204 files in other folders)
