name:
  lineageflow-derivatives
synopsis:
  Discrete derivatives on cell trajectories
description:
  This package implements different discrete differentiation methods. More
  details in the README.
version:
  0.1.0
cabal-version:
  >= 1.10
build-type:
  Simple
license:
  AGPL-3
maintainer:
  mail@guaraqe.gq
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões

library
  exposed-modules:
    LineageFlow.Derivatives.Types
    LineageFlow.Derivatives.Holoborodko
    LineageFlow.Derivatives.Simple
    LineageFlow.Derivatives.Lanczos
    LineageFlow.Derivatives.Utils
  build-depends:
    lineageflow-prelude,
    base,
    exact-combinatorics,
    lens
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    TypeOperators
  hs-source-dirs:
    src
  ghc-options:
    -O2
    -Wall

executable lf-derivatives
  main-is: Main.hs
  build-depends:
    lineageflow-prelude,
    lineageflow-algorithm,
    lineageflow-io-cbor,
    lineageflow-derivatives,
    base,
    exact-combinatorics,
    lens
  default-extensions:
    NoImplicitPrelude
    TypeOperators
    MultiParamTypeClasses
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    StrictData
    ConstraintKinds
    DataKinds
    LambdaCase
    TemplateHaskell
  hs-source-dirs:
    src
    app
  other-modules:
    Holoborodko
    Lanczos
    Simple
  ghc-options:
    -O2
    -threaded
    -Wall
    -fno-warn-unused-top-binds
    -fno-warn-missing-signatures
    -fno-warn-unticked-promoted-constructors
    -fno-warn-incomplete-patterns
  default-language:
    Haskell2010
