name:
  lineageflow-forces
version:
  0.1.0
synopsis:
  Estimation of forces from cell trajectories.
description:
  This package defines a estimation scheme for the inference of forces between
  cells from cell contacts and velocities and accelerations. More details in
  the README.
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >= 1.10

library
  hs-source-dirs:
    src
  default-extensions:
    NoImplicitPrelude
    TypeOperators
  exposed-modules:
    LineageFlow.Forces
    LineageFlow.Forces.Eigen
    LineageFlow.Forces.Coarse
    LineageFlow.Forces.Sparse
  ghc-options:
    -O2
    -Wall
  build-depends:
    lineageflow-prelude,
    lineageflow-triangulations,
    lineageflow-homogenization,
    base,
    containers,
    LATS,
    eigen,
    erf
  default-language:
    Haskell2010

executable lf-forces
  main-is:
    Main.hs
  hs-source-dirs:
    src,
    app
  default-extensions:
    NoImplicitPrelude
    TypeOperators
    MultiParamTypeClasses
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    StrictData
    ConstraintKinds
    DataKinds
    LambdaCase
    TemplateHaskell
  ghc-options:
    -O2
    -Wall
    -fno-warn-unused-top-binds
    -fno-warn-missing-signatures
    -fno-warn-unticked-promoted-constructors
    -fno-warn-incomplete-patterns
  build-depends:
    lineageflow-prelude,
    lineageflow-algorithm,
    lineageflow-io-cbor,
    lineageflow-forces,
    lineageflow-triangulations,
    lineageflow-homogenization,
    base,
    containers,
    LATS,
    eigen,
    erf
  other-modules:
    Asym
    Stress
    Forces
    Norm
  default-language:
    Haskell2010
