name:
  lineageflow-homogenization
version:
  0.1.0
synopsis:
  Spatial and temporal homogenization for LineageFlow.
description:
  This package implements many homogenization methods for measurements in
  LineageFlow. More details in the README.
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
extra-source-files:
  CHANGELOG.md
cabal-version:
  >=1.10

executable lf-homogenization

  main-is:
    Main.hs

  ghc-options:
    -O2
    -Wall
    -threaded
    -fno-warn-unused-top-binds
    -fno-warn-missing-signatures
    -fno-warn-unticked-promoted-constructors

  build-depends:
    lineageflow-prelude,
    lineageflow-algorithm,
    lineageflow-io-cbor,
    lineageflow-homogenization,
    containers,
    base,
    deepseq,
    LATS,
    lens

  hs-source-dirs:
    app,
    src

  default-extensions:
    NoImplicitPrelude
    MultiParamTypeClasses
    DeriveGeneric
    OverloadedStrings
    StrictData
    ConstraintKinds
    TypeOperators
    DataKinds
    LambdaCase
    TemplateHaskell

  default-language:
    Haskell2010

library

  exposed-modules:
    LineageFlow.Homogenization.Space
    LineageFlow.Homogenization.Time
    LineageFlow.Homogenization.Triangulation
    LineageFlow.Homogenization.Types

  build-depends:
    lineageflow-prelude,
    base,
    deepseq,
    LATS,
    containers,
    lens

  ghc-options:
    -O2
    -Wall

  hs-source-dirs:
    src

  default-extensions:
    NoImplicitPrelude
    TypeOperators

  default-language:
    Haskell2010
