name:
  lineageflow-tracking
version:
  0.1.0
synopsis:
  Manipulation of cell trackings
description:
  This package defines a type for cell tracking and contains algorithms for
  their manipulation. More details in the README.
license:
  GPL-3
license-file:
  LICENSE
copyright:
  2018 Juan Raphael Diaz Simões
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
category:
  Numerical
build-type:
  Simple
cabal-version:
  >=1.10

executable lf-tracking

  hs-source-dirs:
    app,
    src

  default-extensions:
    NoImplicitPrelude
    MultiParamTypeClasses
    DeriveGeneric
    OverloadedStrings
    StrictData
    ConstraintKinds
    TypeOperators
    DataKinds
    LambdaCase
    TemplateHaskell

  main-is:
    Main.hs

  ghc-options:
    -O
    -Wall
    -fno-warn-unused-top-binds
    -fno-warn-missing-signatures
    -fno-warn-unticked-promoted-constructors
    -fno-warn-incomplete-patterns

  build-depends:
    lineageflow-prelude,
    lineageflow-algorithm,
    lineageflow-io-cbor,
    lineageflow-tracking,
    base,
    containers,
    lens,
    nonempty-alternative,
    optparse-applicative,
    rlist,
    serialise,
    storable-record,
    unordered-containers

  default-language:
    Haskell2010


library

  hs-source-dirs:
    src

  default-extensions:
    NoImplicitPrelude

  exposed-modules:
    LineageFlow.Tracking
    LineageFlow.Tracking.Types

  ghc-options:
    -O
    -Wall
    -fno-warn-missing-signatures

  build-depends:
    lineageflow-prelude,
    lineageflow-algorithm,
    lineageflow-io-cbor,
    base,
    containers,
    lens,
    rebase,
    rlist,
    serialise,
    nonempty-alternative,
    storable-record

  default-language:
    Haskell2010
