name:
  lineageflow-triangulations
version:
  0.1.0
synopsis:
  Manipulation of triangulations for LineageFlow.
description:
  This package contains functions for the generation and manipulation of
  triangulations. More details in the README.
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >= 1.10

library
  exposed-modules:
    LineageFlow.Triangulations.Delaunay
    LineageFlow.Triangulations.Neighbors
    LineageFlow.Triangulations.GlobalNeighbors
    LineageFlow.Triangulations.Radius
    LineageFlow.Triangulations.Expand
    LineageFlow.Triangulations.FullGraph
  build-depends:
    base,
    containers,
    deepseq,
    lineageflow-prelude,
    lineageflow-statistics,
    qhull-simple
  hs-source-dirs:
    src
  default-extensions:
    NoImplicitPrelude
    TypeOperators
  ghc-options:
    -O2
    -Wall
  default-language:
    Haskell2010

executable lf-triangulations
  main-is:
    Main.hs
  build-depends:
    base,
    containers,
    deepseq,
    lineageflow-prelude,
    lineageflow-statistics,
    qhull-simple,
    lineageflow-triangulations,
    lineageflow-algorithm,
    lineageflow-io-cbor
  hs-source-dirs:
    src,
    app
  default-extensions:
    NoImplicitPrelude
    TypeOperators
    MultiParamTypeClasses
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    StrictData
    ConstraintKinds
    DataKinds
    LambdaCase
    TemplateHaskell
  ghc-options:
    -O2
    -Wall
    -fno-warn-unused-top-binds
    -fno-warn-missing-signatures
    -fno-warn-unticked-promoted-constructors
    -fno-warn-incomplete-patterns
    -threaded
  default-language:
    Haskell2010
