name:
  lineageflow-database-sqlite
version:
  0.1.0
synopsis:
  A database for LineageFlow implemented with SQLite.
description:
  A LineageFlow database implemented using SQLite and hashed files. More
  details in the README.
license:
  AGPL-3
copyright:
  2018 Juan Raphael Diaz Simões
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
category:
  Numerical
build-type:
  Simple
cabal-version:
  >=1.10

library

  hs-source-dirs:
    src

  default-extensions:
    TypeOperators

  exposed-modules:
    LineageFlow.Database.SQLite
    LineageFlow.Database.SQLite.Implementation
    LineageFlow.Database.SQLite.Types
    LineageFlow.Database.SQLite.SQL

  ghc-options:
    -O2
    -Wall

  build-depends:
    lineageflow-database,
    aeson,
    base,
    bytestring,
    cryptonite,
    exceptions,
    filepath,
    directory,
    selda,
    selda-sqlite,
    temporary,
    text

  default-language:
    Haskell2010
