name:
  lineageflow-io
version:
  0.1.0
synopsis:
  IO interface for LineageFlow.
description:
  This package defines an interface for reading and writing measurements from
  files.  More details in the README.
cabal-version:
  >=1.10
build-type:
  Simple
license:
  AGPL-3
maintainer:
  mail@guaraqe.gq
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões

library
  exposed-modules:
    LineageFlow.IO
    LineageFlow.IO.IOMethod
  build-depends:
    base,
    text

  hs-source-dirs: src
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    FlexibleInstances
    FlexibleContexts
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeOperators
  ghc-options:
    -Wall -O2
  default-language:
    Haskell2010
