name:
  lineageflow-prelude
version:
  0.1.0
synopsis:
  A prelude for LineageFlow.
synopsis:
  A prelude adapted for the manipulation of spatio-temporal cell lineages within LineageFlow. More details in the README.
license:
  GPL-3
license-file:
  LICENSE
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >=1.10

library

  hs-source-dirs:
    src

  default-extensions:
    TypeOperators
    NoImplicitPrelude

  exposed-modules:
    LineageFlow.Prelude

    LineageFlow.Prelude.Dependent
    LineageFlow.Prelude.Lineage
    LineageFlow.Prelude.PointsOfView
    LineageFlow.Prelude.Conversion
    LineageFlow.Prelude.Containers
    LineageFlow.Prelude.Utils
    LineageFlow.Prelude.Fold

    LineageFlow.ArrayU
    LineageFlow.BArrayU

    LineageFlow.Linear
    LineageFlow.Linear.Sparse
    LineageFlow.Linear.Raw

  ghc-options:
    -O2
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-orphans

  build-depends:
    lineageflow-types,
    base,
    base-prelude,
    deepseq,
    phantom-index,
    LATS,
    constraint-classes,
    containers,
    foldl,
    lens,
    linear,
    newtype,
    storable-record,
    storable-tuple,
    generic-storable,
    vector

  default-language:
    Haskell2010
