name:
  lineageflow-query
version:
  0.1.0
cabal-version:
  >=1.10
build-type:
  Simple
license:
  GPL-3
license-file:
  LICENSE
copyright:
  2018 Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
synopsis:
  Queries for LineageFlow algorithms.
description:
  This package contains the types for the query of algorithms in
  LineageFlow. More details in the README.
author:
  Juan Raphael Diaz Simões
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    LineageFlow.Query.Query
    LineageFlow.Query.MInfo
    LineageFlow.Query
  other-modules:
    LineageFlow.Query.Imports
  build-depends:
      base >=4.9 && <4.10
    , lineageflow-base
    , aeson
    , containers
    , lens
    , text
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    OverloadedStrings
    StrictData
    TemplateHaskell
  hs-source-dirs: src
  ghc-options: -Wall -O2

