name:
  lineageflow-types
version:
  0.1.0
synopsis:
  Fundamental types used in LineageFlow algorithms.
description:
  This package defines the fundamental types used in LineageFlow algorithms.
  More details in the README.
license:
  AGPL-3
copyright:
  2018 Juan Raphael Diaz Simões
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
category:
  Numerical
build-type:
  Simple
cabal-version:
  >=1.10

library

  hs-source-dirs:
    src

  default-extensions:
    DeriveFunctor
    DeriveGeneric
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    RankNTypes
    TemplateHaskell
    TypeOperators
    UndecidableInstances

  exposed-modules:
    LineageFlow.Types
    LineageFlow.Types.Cell
    LineageFlow.Types.Time
    LineageFlow.Types.Dep
    LineageFlow.Types.Numerical
    LineageFlow.Types.Simplex

  ghc-options:
    -O2
    -Wall

  build-depends:
    base,
    lens,
    linear,
    mtl,
    newtype,
    generic-storable,
    storable-record,
    storable-tuple,
    transformers

  default-language:
    Haskell2010
