name:
  lineageflow-export
version:
  0.1.0
synopsis:
  Utilities for exporting selections for LineageFlow.
description:
  This packages includes utilities for exporting cell selections for
  LineageFlow. More details in the README.
cabal-version:
  >=1.10
build-type:
  Simple
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq

library
  exposed-modules:
    LineageFlow.Export.Format.Emb
    LineageFlow.Export.Format.Selection
  build-depends:
    lineageflow-prelude,
    lineageflow-tracking,
    base >=4.7 && <5,
    bytestring,
    cassava,
    vector,
    vector-algorithms
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    TypeOperators
    StrictData
  hs-source-dirs:
    src
  ghc-options:
    -O2
    -Wall

executable lf-export
  main-is:
    Main.hs
  build-depends:
    base,
    lineageflow-prelude,
    lineageflow-algorithm,
    lineageflow-database-sqlite,
    lineageflow-io-cbor,
    lineageflow-export,
    bytestring,
    linear,
    optparse-applicative,
    filepath,
    text
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    StrictData
  hs-source-dirs:
    app
  ghc-options:
    -O2
    -Wall
