name:
  lineageflow-import
version:
  0.1.0
synopsis:
  Utilities for importing tracking files in LineageFlow.
description:
  This package includes utilities for the import of cell tracking files into a
  LineageFlow database. More details in the README.
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
category:
  Web
cabal-version:
  >=1.10

library
  exposed-modules:
    LineageFlow.Import
    LineageFlow.Import.Format.LineageTree
    LineageFlow.Import.Format.CSV
    LineageFlow.Import.Types
    LineageFlow.Import.Utils
  build-depends:
    lineageflow-prelude,
    lineageflow-io-cbor,
    lineageflow-tracking,
    base,
    bytestring,
    cassava,
    vector,
    vector-algorithms
  default-language:
    Haskell2010
  default-extensions:
    NoImplicitPrelude
    TypeOperators
    StrictData
  hs-source-dirs:
    src
  ghc-options:
    -O2
    -Wall

executable lf-import
  main-is:
    Main.hs
  build-depends:
    base,
    lineageflow-import,
    lineageflow-database-sqlite,
    lineageflow-io-cbor,
    bytestring,
    linear,
    optparse-applicative,
    filepath,
    temporary,
    deepseq,
    text
  default-language:
    Haskell2010
  default-extensions:
    StrictData
  hs-source-dirs:
    app
  ghc-options:
    -O2
    -Wall
