name:
  lineageflow-playground
version:
  0.1.0
synopsis:
  Helpers for interactive development for LineageFlow.
description:
  Utilities for the interactive development and exploration of LineageFlow
  algorithms. More details in the README.
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
copyright:
  2018 Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >= 1.10

library
  exposed-modules:
    LineageFlow.Playground
  build-depends:
    lineageflow-prelude,
    lineageflow-algorithm,
    lineageflow-io-cbor,
    lineageflow-database-sqlite,
    base,
    lens,
    foreign-store,
    unordered-containers,
    statistics,
    lineageflow-plot,
    lineageflow-statistics,
    lineageflow-derivatives,
    text
  hs-source-dirs:
    src
  default-extensions:
    NoImplicitPrelude
    TypeOperators
  ghc-options:
    -O2
    -Wall
  default-language:
    Haskell2010
