name:
  lineageflow-plot-interface
version:
  0.1.0
synopsis:
  Interface for plots in LineageFlow.
description:
  This package defines an interface for plotting in LineageFlow. More details
  in the README.
license:
  AGPL-3
maintainer:
  mail@guaraqe.gq
author:
  Juan Raphael Diaz Simões
copyright:
  Juan Raphael Diaz Simões
extra-source-files:
  CHANGELOG.md
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    LineageFlow.Plot.Interface
  build-depends:
    lineageflow-query,
    base,
    aeson,
    colour,
    Chart,
    data-default-class,
    lens
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
