name:
  lineageflow-server-api
version:
  0.1.0
synopsis:
  API for server-client communication in LineageFlow.
description:
  This package defines the API between the launching server and the graphical
  interface of LineageFlow. More details in the README.
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
copyright:
  2018 Juan Raphael Diaz Simões
build-type:
  Simple
extra-source-files:
  ChangeLog.md
cabal-version:
  >=1.10

library
  exposed-modules:
    LineageFlow.Server.API
  build-depends:
    base,
    aeson,
    lineageflow-declaration,
    lineageflow-query,
    lineageflow-script,
    lineageflow-viewer-interface,
    servant,
    text
  hs-source-dirs:
    src
  default-language:
    Haskell2010
