name:
  lineageflow-server
version:
  0.1.0
synopsis:
  A server for LineageFlow algorithms.
description:
  This package implements a server for launching LineageFlow algorithms. More
  details in the README.
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
copyright:
  2018 Juan Raphael Diaz Simões
build-type:
  Simple
extra-source-files:
  CHANGELOG.md
cabal-version:
  >=1.10

executable lf-server
  main-is:
    Main.hs
  build-depends:
    base >=4.9 && <4.10,
    lineageflow-algorithm,
    lineageflow-server-api,
    lineageflow-viewer-interface,
    lineageflow-script,
    lineageflow-database-sqlite,
    aeson,
    blaze-html,
    directory,
    exceptions,
    filepath,
    temporary,
    transformers,
    lens,
    markdown,
    mtl,
    servant-server,
    wai,
    wai-extra,
    warp,
    yaml,
    process,
    random,
    servant,
    containers,
    text,
    unix

  hs-source-dirs:
    app
  ghc-options:
    -O2
    -threaded
    -Wall
  default-language:
    Haskell2010
