name:
  lineageflow-viewer-interface
version:
  0.1.0
synopsis:
  Interface for LineageFlow viewer.
description:
  This package defines the interface between server, client and viewer
  executable.  More details in the README.
license:
  AGPL-3
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
copyright:
  2018 Juan Raphael Diaz Simões
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    LineageFlow.Viewer.Interface
  build-depends:
    base,
    lineageflow-query,
    aeson,
    lens,
    text
  hs-source-dirs:
    src
  default-language:
    Haskell2010
